# veloran

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/migrations/: deploy.ts
anchor/programs/veloran-paywall/: Cargo.toml
anchor/programs/veloran-paywall/src/: lib.rs
app/: globals.css  page.tsx
app/api/health/: route.ts
app/demo/: page.tsx
app/for-agents/: page.tsx
components/: DashboardClient.tsx  PaywallGate.tsx  Providers.tsx  SendUsdcClient.tsx  SubscribeButton.tsx
docs/: HANDOFF.md  claude-design-pitchdeck-prompt.md  db-operations.md  demo-script.md  mainnet-smoke-checklist.md  ops-runbook.md  payment-safety.md  pitch-deck.html  pitch-deck.md  submission-description.md
docs/deck/: README.md  index.html  print.html  slides-1-3.jsx  slides-4-6.jsx  slides-7-10.jsx  styles.css
docs/handoffs/: 2026-05-09-hermes-deck-script-domain-mainnet-update.md  2026-05-09-kimi-design-vps-hermes-handoff.md  2026-05-09-kimi-design-wsl-handoff.md
docs/plans/: 2026-05-08-veloran-production-mainnet-plan.md  2026-05-09-mainnet-and-hackathon-sprint.md  2026-05-09-phase-4-executor-plan.md  2026-05-09-phase-4-hardening.md
docs/runs/: 2026-05-09-phase4-devnet-verification.md
lib/: log.ts  network.ts  payment-intent-validation.ts  payment-intents.ts  payment-memo.ts  solana.ts  x402.ts
prisma/: schema.prisma
scripts/: ai-reader.ts  apply-payment-intents-sql.sh  check-prisma-drift.sh  mainnet-smoke-test.ts  payment-safety-smoke.ts  payment-verification-tests.ts
scripts/sql/: 20260508_payment_intents.sql
(+17 files in other folders)
